--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="62"
-      android:versionName="Sept. 25, 2015"
+      android:versionCode="63"
+      android:versionName="3 Oct. 2015"
       android:installLocation="auto"      
 >
 
