--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="65"
-      android:versionName="13 Oct. 2015"
+      android:versionCode="67"
+      android:versionName="20151124"
       android:installLocation="auto"      
 >
 
@@ -74,6 +74,10 @@
 		<activity android:name="TitleActivity" android:screenOrientation="portrait"></activity>        
 		<activity android:name=".features.node.PaintActivity" android:screenOrientation="portrait"></activity>        		
 		<activity android:name=".features.node.QRCodeReaderActivity" android:screenOrientation="portrait"></activity>        				
+		<activity android:name="usbong.android.MyYouTubeActivity"         
+		    android:theme="@style/ThemeHoloWithActionBar"
+        	android:configChanges="keyboardHidden|orientation|screenSize">
+		</activity>					
 		<activity android:name="usbong.android.community.FitsListDisplay" android:screenOrientation="portrait"
 		    android:theme="@style/ThemeHoloWithActionBar">
             <meta-data
