--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="78"
-      android:versionName="20160408v2"
+      android:versionCode="79"
+      android:versionName="20160410"
       android:installLocation="auto"      
 >
 
