--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="81"
-      android:versionName="20160415"
+      android:versionCode="83"
+      android:versionName="20160417v2"
       android:installLocation="auto"      
 >
 
