--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="85"
-      android:versionName="20160422"
+      android:versionCode="86"
+      android:versionName="2.0.0-20160510"
       android:installLocation="auto"      
 >
 
