--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="94"
-      android:versionName="2.0.8-20161219"
+      android:versionCode="95"
+      android:versionName="2.0.1-2016019"
       android:installLocation="auto"      
 >
 
@@ -20,9 +20,6 @@
     <uses-permission android:name="android.permission.CAMERA"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
     <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-feature android:name="android.hardware.camera" />
@@ -48,15 +45,14 @@
             </intent-filter>
         </activity>-->
         
-        <activity android:name="SignInActivity"
-                  android:label="@string/app_name" android:screenOrientation="portrait">
+        <activity android:name="UsbongMainActivity"
+                  android:label="@string/app_name" android:screenOrientation="portrait"
+                  android:theme="@style/ThemeHoloWithActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="UsbongMainActivity" android:screenOrientation="portrait"
-                  android:theme="@style/ThemeHoloWithActionBar"></activity>
         <activity android:name="UsbongDecisionTreeEngineActivity" android:screenOrientation="portrait"
             	  android:theme="@style/ThemeHoloWithActionBar">
             <meta-data
