--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="95"
-      android:versionName="2.0.1-2016019"
+      android:versionCode="96"
+      android:versionName="2.1.0-20160120"
       android:installLocation="auto"      
 >
 
@@ -64,7 +64,8 @@
 		        <data android:mimeType="application/utree" />
 	    	</intent-filter>
         </activity>
-        <activity android:name="CameraActivity" android:permission="android.permission.CAMERA" android:screenOrientation="nosensor"></activity>
+        <activity android:name="CameraActivity" android:permission="android.permission.CAMERA" android:screenOrientation="nosensor"
+            android:theme="@style/ThemeHoloWithActionBar"></activity>
 		<activity android:name="SettingsActivity" android:screenOrientation="portrait"></activity>
 		<activity android:name="RegisterActivity" android:screenOrientation="portrait"
 		    android:theme="@style/ThemeHoloWithActionBar"></activity>        
